fix: add z-index to header and floaters

--- a/src/components/Header/Floaters.module.css
+++ b/src/components/Header/Floaters.module.css
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0px;
   right: 0px;
+  z-index: 1001;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
